--- a/writeup/proposal.tex
+++ b/writeup/proposal.tex
@@ -18,7 +18,8 @@
     citecolor={blue!50!black},
     urlcolor={blue!80!black}
 }
-\usepackage{cleveref}
+\usepackage{cleveref} % Reference
+\usepackage{enumitem} % nosep
 
 \usepackage{array,tabularx}
 
