--- a/writeup/research_design.tex
+++ b/writeup/research_design.tex
@@ -2,7 +2,25 @@
 
 In this section, I will first discuss measurement issues. And then within each research design section I will specifically discuss data availability and which measurement is available.
 
-\subsubsection{Measuring spillover}
+\subsubsection{Measuring spillover indirectly}
+
+Similar to how growth economists start endogenizing technological change, FDI researchers investigate how technology spillover from FDI may happen instead of assuming its inevitability \citep{Romer1994}. Several channels for spillovers have been proposed.
+
+These channels are:
+\begin{itemize}
+	\item imitation:  private firms may reverse engineer a production or management technique \citep{Wang1992}, which is facilitated by backward linkage between local and foreign firms \citep{Javorcik2004}. This motivates my first measure of spillover effect: \% of private firms that participate in contracts with foreign firms.
+	\item competition: similar to the effect of competition from arm's length trade on productivity, the presence of foreign firms in the domestic market put pressure on local firms to reduce inefficiency \citep{Glass2002}. (Doing Business has firm-level data on the number of private/state/foreign competitors in the last year)
+	\item export demonstration: foreign firms are more knowledgeable about exporting, which involves high fixed cost to set up a distribution and transport infrastructure, or learning about foreign taste and regulatory environment. Domestic firms can learn this ``export know-how'' from foreign firms \citep{Aitken1997}. This motivates my third measure of spillover effect: \% of private firms that export.
+	\item skills acquisition: workers trained in foreign firms bring along their human capital when they move to domestic firms \citep{Djankov2000}. This presumes a healthy domestic sector that can offer competitive wages to workers.
+\end{itemize}
+
+Among these channels, \textit{imitation} and \textit{export demonstration} forms the theoretical basis of my two proxy measurements of spillover:
+\begin{enumerate}
+\item frequent business contacts between foreign and domestic firms,
+\item percentage of domestic firms engaging in export
+\end{enumerate}
+
+\subsubsection{Measuring spillover directly}
 
 Since detecting spillover effect is itself a major research program, my research will get at this from multiple angles. First, I will measure spillover indirectly with two theoretically driven measures: 1) the \% of private firms engaging in business relations with foreign firms, and 2) the \% of private firms that exports
 
