--- a/writeup/theory.tex
+++ b/writeup/theory.tex
@@ -1,78 +1,78 @@
-My theory aims to explain the lack of technological spillover from foreign firms to private firms. I define foreign firms as firms with over 50\% The argument will be laid out in three steps:
+My theory aims to explain the lack of technological spillover from foreign firms to private firms. I define
+
+\begin{itemize}[nosep]
+\item \textit{foreign firms} as firms with over 50\% ownership belonging to private foreign individuals, companies, or organizations
+\item \textit{private firms} as firms with over 50\% ownership belonging to private domestic individuals, companies, or organizations
+\item \textit{state firms} as firms with over 50\% ownership belonging to the host government
+\end{itemize}
+
+and
+
+\begin{itemize}
+\item \textit{technological spillover} as the beneficial effects of foreign firms' technological knowledge on the productivity and innovative ability of private firms.
+\end{itemize}
+
+The argument will be laid out in three steps:
 
 \begin{enumerate}
 \item I argue that for FDI to have a growth enhancing effect, there must be technological spillover from foreign firms to private firms. Therefore, if we see that there is little technological spillover, it must mean that the government is attracting FDI for reasons other than growth.
 
-Measuring technological spillover:
-\begin{itemize}
-\item Frequency of contacts between foreign and private firms (cite literature on spillover happen through contact here)
-\item The actual increase in productivity and technological capability of private firms
-\end{itemize}
-
-
-\item I argue that corruption (i.e. bribes from foreign firms) is one reason (besides growth) that the government wants FDI for. The testable implication is that corruption countries (sectors) is associated with a lack of technological spillover between foreign and private firms in that countries (sectors). At this step, the level of corruption in a country (sector) is treated as exogenous.
+\item I argue that corruption (i.e. bribes from foreign firms) is one reason (besides growth) that the government wants FDI for. The testable implication is that corruption in a country (sector) is associated with a lack of technological spillover between foreign and private firms in that country (sector). At this step, the level of corruption in a country (sector) is treated as exogenous.
 
 For this argument to be convincing, one must take into account alternative explanations, i.e. reasons besides corruption and growth that governments may want FDI for:
 \begin{itemize} 
-\item Employment: under strong pressure for employment generation, the government may want FDI purely for the jobs it brings instead of the long-term economic growth. To account for this alternative explanation, I will control for the growth rate of labor force. Since the labor force growth is largely determined 18-20 years prior, it is plausibly exogenous to other variables in the current period and thus well-behaved statistically.  
-\item Capital: In the early-stage of development, a country may deliberately pursue a capital-driven instead of technology-driven growth. To account for this alternative explanation, I will control for the aggregate capital stock or the national savings rate.
-\item Election cycle: Much research has shown that the election calendar puts populist pressure on the government, leading to manipulation of macroeconomic factors such as the exchange rate \citep{Blomberg2001}. Similarly, one may argue that the government wants to attract many FDI projects for a positive headline near election time even though these projects do not have a large impact on long-term growth. To account for this alternative explanation, I will control for whether a FDI project begins in an election year.
+\item Employment: under strong pressure for employment generation, the government may want FDI purely for the jobs it brings instead of long-term economic growth. To account for this alternative explanation, I will control for the growth rate of the labor force. Since labor force growth is largely determined 18-20 years prior, it is plausibly exogenous to other variables in the current period and thus well-behaved statistically.  
+\item Capital: In the early-stage of development, a country may deliberately pursue a capital-driven instead of technology-driven growth. To account for a country's immediate need for capital, I will control for the aggregate capital stock.
+\item Election cycle: Much research has shown that the election calendar puts populist pressure on the incumbent government, leading to manipulation of macroeconomic factors such as the exchange rate \citep{Blomberg2001}. Similarly, one may argue that the government attracts FDI to generate positive headlines near election dates even though these FDI projects do not have a large impact on long-term growth. To account for this alternative explanation, I will control for whether a foreign firm establishes in an election year.
 \end{itemize}
 
-\item I endogenize the choice of government officials to engage in corruption by explicitly considering their utility maximization. To get a handle on the options available to the officials, I hold the political system constant by focusing on the case of Vietnam. With its provincial variation in FDI attraction and private sector development, Vietnam's provinces serve as an insightful microcosm of the cross-national differences. I argue that, in Vietnam, whether there is spillover between the foreign and the private sector depends on the choice of provincial officials to choose between potential rents brought by foreign firms and promotions by the central government, of which private sector development is an important criterion.
+\item Finally, I endogenize the choice of government officials to engage in corruption by explicitly considering their utility maximization. To get a handle on the options available in the officials' calculus, I hold the political system constant by focusing on the case of Vietnam. With its variation in FDI attraction and private sector development, Vietnam's provinces serve as an insightful microcosm of the cross-national differences. I argue that, in Vietnam, whether FDI creates technological spillover depends on whether provincial officials prefer bribes by foreign firms or promotions by the central government, of which private sector development is an important criterion.
 \end{enumerate}
 
-\subsection{The growth enhancing effect of FDI depends on spillover of technology}
+\subsection{Step 1: The growth enhancing effect of FDI depends on technological spillover}
 
 As well-known from neoclassical growth theory, the diminishing return to capital will at one point stop capital from accumulating further, preventing long-run economic growth to be permanently driven by capital accumulation alone \citep{Solow1956}. Therefore, long-run growth ultimately requires technological innovation, which continually increases the productivity of capital and counteracts the diminishing returns.
 
-This insight implies that FDI cannot promote the host country's growth simply from the amount of capital it brings. This explains the uncertain impact of FDI on growth and poverty reduction \citep{Nair-Reichert2001, Carkovic2002, Guerra2009}. Indeed, scholars have found that FDI can only a growth-enhancing impact if there is technological spillover from the foreign to the domestic sectors \citep{Nunnenkamp2004}. This empirical finding provides support for \citet{Findlay1978}'s model, in which technology spillover from foreign firms shift the domestic factor-price frontier to the right, allowing more output from the same input, resulting in higher profits and higher wages (i.e. higher savings) for the domestic sector. This ultimately leads to a continually increasing domestic capital stock.
+This insight implies that FDI cannot promote the host country's growth simply from the amount of capital it brings. Therefore, FDI only has a highly uncertain impact on growth and poverty reduction \citep{Nair-Reichert2001, Carkovic2002, Guerra2009}. Scholars have further confirmed that FDI can only a growth-enhancing impact if there is technological spillover from the foreign to the domestic sectors \citep{Nunnenkamp2004}. This empirical finding provides support for \citet{Findlay1978}'s groundbreaking model of FDI and growth, in which technology spillover from foreign firms shift the domestic factor-price frontier to the right, allowing more output from the same input, resulting in higher profits and higher wages (i.e. higher savings) for the domestic sector. This ultimately leads to a continually increasing domestic capital stock.
 
-As economists attempt to improve neoclassical growth theory by endogenizing technological progress, FDI researchers similarly investigate how technology spillover from FDI may happen instead of assuming its inevitability \citep{Romer1994}. Several channels for spillovers have been proposed.
+Since FDI can only be beneficial to growth if there is technological spillover, if one does not observe spillover, it must mean that the host government is attracting FDI for reasons other than growth. In the next step in the theory, I argue that bribe from foreign firms is one such reason.
 
-These channels are:
-\begin{itemize}
-	\item imitation:  private firms may reverse engineer a production or management technique \citep{Wang1992}, which is facilitated by backward linkage between local and foreign firms \citep{Javorcik2004}. This motivates my first measure of spillover effect: \% of private firms that participate in contracts with foreign firms.
-	\item competition: similar to the effect of competition from arm's length trade on productivity, the presence of foreign firms in the domestic market put pressure on local firms to reduce inefficiency \citep{Glass2002}. (Doing Business has firm-level data on the number of private/state/foreign competitors in the last year)
-	\item export demonstration: foreign firms are more knowledgeable about exporting, which involves high fixed cost to set up a distribution and transport infrastructure, or learning about foreign taste and regulatory environment. Domestic firms can learn this ``export know-how'' from foreign firms \citep{Aitken1997}. This motivates my third measure of spillover effect: \% of private firms that export.
-	\item skills acquisition: workers trained in foreign firms bring along their human capital when they move to domestic firms \citep{Djankov2000}. This presumes a healthy domestic sector that can offer competitive wages to workers.
-\end{itemize}
 
-Among these channels, \textit{imitation} and \textit{export demonstration} forms the theoretical basis of my measurement of spillover.
-
-\subsection{FDI and corruption (cross-nationally and cross-sectorally)}
+\subsection{Step 2: FDI and corruption (cross-nationally and cross-sectorally)}
 
 \subsubsection{Defining corruption}
 
-Defining corruption has been a long-standing and inconclusive debate (cite). The contention stems from the normative nature of the ``corruption'' concept, which shifts significantly across context and thus difficult to build an analytical edifice upon. 
+Defining corruption has been a long-standing and inconclusive debate \citep{Johnston1996}. The contention stems from the normative nature of the ``corruption'' concept, which shifts significantly across context and thus difficult to build an analytical edifice upon. 
 
-Consider the most common definition of corruption as ``the abuse of the public role for private gains.'' Make no mistake, this definition is not always clear cut. What constitutes ``abuse''? The term implies the violation of certain standards, which only further asks: what standards are supposed to be adhered to? Some scholars may emphasize a set of standards based on formal law, but the law is not always legitimate (cite). Yet others argue for a set of standards based on norms, but difference in norms across societies may be so extensive and unsystematic that a cross-country analysis untenable. Indeed, nepotism and cronyism in one society may be social capital in another, with all shades of favoritism in between (cite Understanding Corruption). 
+Consider the most common definition of corruption as ``the abuse of public roles for private gains.'' Make no mistake, this definition is not always clear cut. What constitutes ``abuse''? The term implies the violation of certain standards, which only further asks: what standards are supposed to be adhered to? Some scholars emphasize law-based standards, but the law is not always legitimate \citep[17]{Johnston2004}. Yet others argue for norm-based standards, but difference in norms across societies can be so extensive and unsystematic that renders a cross-country analysis untenable. Indeed, nepotism and cronyism in one society may be social capital in another, with all shades of favoritism in between \citep{Rosen2010}. 
 
-In addition, the distinction between ``public'' and ``private'' are not always clear, especially during rapid economic liberalization and privatization. As the rules change continuously, the dividing line between an innovator and a rule-breaker is but a thread left blowing in the political wind (cite China's corruption book).
+In addition, the distinction between ``public'' and ``private'' are not always clear, especially during rapid economic liberalization and privatization. As the rules change continuously, the dividing line between an innovator and a rule-breaker is but a thread left blowing in the political wind \citep{Sun2004}.
 
-Mindful of this definition's shortcomings, I still choose to define corruption as the ``abuse of public role for private gains'' in my research. This is because while this definition may fail as a universal classification of corrupt act, within the scope of my research project its unclarities are largely resolved. First, regarding the potential unclarity over ``abuse'', I will focus on a law-centric definition of violation because of its precision, stability, and broad coverage. The legitimacy of the ``law'' is not as big of a concern as the countries in the sample have sovereignty over their territory and their law has a binding impact in their economic life, especially the formal sectors in which foreign firms operate. (List the countries in the doing business survey, and whether any of them is a failed state). In addition, a law-centric definition fits well with the way corruption is often framed in business surveys, my main source of data, as ``paying informal fees.'' Regardless of whether the respondents think these fees are legitimate or not, it is clear to both the officials and the firms whether these fees are official, as documented in formal laws.
+In spite of its shortcomings, the definition of corruption as the ``abuse of public role for private gains'' works well for my research. While this definition may fail as a universal classification of corrupt act, within the scope of my research project its unclarities are largely resolved. First, regarding the unclarity over ``abuse,'' I focus on a law-based definition because of its precision, stability, and broad coverage. The legitimacy of the ``law'' is not as big of a concern because the vast majority of countries with substantial FDI maintain sovereignty over their territory and have laws with a binding impact on their economic life, especially the formal sector in which foreign firms operate. (List the countries in the doing business survey, and whether any of them is a failed state). In addition, a law-based definition fits well with the way corruption is often framed in business surveys, my main source of data, as ``paying informal fees.'' Regardless of whether the respondents think these fees are legitimate or acceptable, it is clear to both the officials and the firms whether these fees are official, as documented in formal laws.
 
-Second, the ``public'' and ``private'' divide is also clear cut within the scope of my project. I focus on corrupt acts in the context of officials exchanging public resources under their control for bribes from foreign firms, for example, expedited paper work, access to land, and harass-free inspections. It is clear that these public resources and services should be distributed fairly, and that the payments are going to the officials' private wealth instead of the state's coffer.
+Second, the ``public'' and ``private'' divide is also clear cut within the scope of my project. I focus on corrupt acts in the context of officials exchanging public resources under their control for bribes from foreign firms (e.g., expedited bureaucracy, access to land, harass-free inspections, etc.). It is clear that these public resources and services should be distributed fairly, and that the payments are going to the officials' private wealth instead of the state's coffer.
 
 \subsubsection{The relationship between corruption and FDI}
 
-My hypothesis that host country officials engage in corruption with foreign firms to the detriment of domestic firms is a novel contribution to the IPE literature of FDI and corruption. So far, the literature has been predominantly dominated by studies showing that a high level of corruption deters FDI \citep{Wei2000, Hakkala2008, Al-Sadig2009}. (Summarize a bit here) But what about firms that choose to invest in a highly corrupt environment nonetheless? One strain of the literature argues that foreign firms can help reduce corruption in host country via regulatory pressure effect, demonstration effect, and professionalization effect \citep{Kwok2006}; or via competing away the rents of the domestic firms, reducing the supply of bribes \citep{Sandholtz2003}. In these works, corruption between the host government and the foreign firm has been conceptualized as \textit{predatory}.
+The majority of literature on the relationship between corruption and FDI focuses on showing that a high level of corruption deters FDI \citep{Wei2000, Hakkala2008, Al-Sadig2009}. (Summarize a bit here) 
 
-My research offers a new perspective, recognizing that, compared to domestic firms, foreign firms always have the freedom to move out of the country or at least stop bringing in capital. Therefore, the exchange between the host government and the foreign firm will always have a \textit{voluntary} element.\footnote{There is an argument about FDI being harder to relocate, and thus subject to creeping expropriation. However, corruption doesn't tend to change that quickly, and a foreign investor looks into a country knows relatively well the level of corruption that they are getting involved with.} Through this angle, corruption between the government and the foreign firm can be \textit{collusive}, as governments get bribe while foreign firms get advantages over domestic firms in terms of an expedited bureaucracy or privileged use of public resources \citep{Hellman2002}. Indeed, there are evidence of foreign firms bribing to get an upper hand in the local market\footnote{http://www.nytimes.com/2012/04/22/business/at-wal-mart-in-mexico-a-bribe-inquiry-silenced.html?pagewanted=all} or to pursue rent in protected industries \citep{Malesky2015}. Such collusive relationship between the government and foreign firm may be the key to explain the puzzle of governments wanting to attract a lot of FDI despite the lack of developmental impact.
+But what about foreign firms that choose to invest in a highly corrupt environment nonetheless? One strain of the literature argues that foreign firms can help reduce corruption in host country via regulatory pressure effect, demonstration effect, and professionalization effect \citep{Kwok2006}; or via competing away the rents of the domestic firms, reducing the supply of bribes \citep{Sandholtz2003}. In these works, corruption between the host government and the foreign firm has been conceptualized as \textit{predatory}.
+
+My research offers a new perspective, recognizing that, compared to domestic firms, foreign firms always have the freedom to move out of the country or at least stop bringing in capital. Therefore, the exchange between the host government and foreign firms are always more \textit{voluntary}.\footnote{There is an argument about FDI being harder to relocate, and thus subject to creeping expropriation. However, corruption doesn't tend to change that quickly, and a foreign investor looks into a country knows relatively well the level of corruption that they are getting involved with.} In this angle, corruption between the government and the foreign firm can be \textit{collusive}, as governments get bribe while foreign firms get advantages over domestic firms in terms of an expedited bureaucracy or privileged use of public resources \citep{Hellman2002}. Indeed, there are evidence of foreign firms bribing to get an upper hand in the local market\footnote{http://www.nytimes.com/2012/04/22/business/at-wal-mart-in-mexico-a-bribe-inquiry-silenced.html?pagewanted=all} or to pursue rent in protected industries \citep{Malesky2015}. 
+
+Such collusive relationship between the government and foreign firm can be the key to explain the puzzle of governments wanting to attract a lot of FDI despite the lack of developmental impact. If so, my research contributes to the large body of works claiming ``institutions matter.'' The nuance that my research brings to existing literature on FDI and corruption is that institutions do not only matter to the amount of capital a country attracts, but also which kind.
 
 \subsubsection{The model of interaction between foreign firms and officials}
 
 The sequencing of the game is as follows:
 \begin{enumerate}
 \item At the start of the game, the level of corruption in a country (sector) is given.\footnote{This assumption is not totally unreasonable. High level of corruption in a country may be largely the result of a political system that fails to produce accountability. Such political system is more likely to be the cause than the result of the maltreatment of domestic firms. Similarly, high level of corruption in a sector may be largely due to the nature of that sector, e.g. resource-intensive, high fixed cost leading to natural monopoy, etc. which is exogenous.}
-\item  If the level of corruption is high, the government is mainly interested in FDI as a source of rent, not as a source of growth. There are several reasons why the government is interested in seeking rent from FDI firms instead of domestic firms. First, if foreign firms are more profitable than domestic firms, they have more rent to be extracted. Second, if foreign firms are larger than domestic firms, they facilitate coordination and allow corruption to be better kept secret among fewer actors. Third, if the interests of firms and the government misalign in the future, foreign firms have both the options of ``exit'' and ``voice'', whereas domestic firms only have ``voice''. The government would much prefer an exiting foreign firm to a domestic firm voicing its interest. The first and second reasons also indicate that my theory is most applicable when the entering FDI firms are large.
+\item  If the level of corruption is high, the government is mainly interested in FDI as a source of rent, not as a source of growth. There are several reasons why the government is interested in seeking rent from FDI firms instead of domestic firms. First, if foreign firms are more profitable than domestic firms, they have more rent to be extracted. Second, if foreign firms are larger than domestic firms, they facilitate coordination and allow corruption to be better kept secret among fewer actors. Third, if the interests of firms and the government misalign in the future, foreign firms have both the options of ``exit'' and ``voice,'' whereas domestic firms only have ``voice.'' The government would much prefer an exiting foreign firm to a domestic firm voicing its interest. The first and second reasons also indicate that my theory is most applicable when the entering FDI firms are large.
 \item The foreign firm weighs the cost of corruption against the benefits of entering the country (sector), such as natural resource, local market, or cheap labor. If the benefit outweighs the cost, the firm enters the country (sector).\footnote{\Cref{fig:fdi_corruption} shows that among countries with a lot of FDI, the level of corruption runs the full gamut. This confirms that foreign firms often enter a country despite the cost of corruption.}
 \item Since the government brings in the foreign firm for rent, not for spillover, it does not care about the development of the private sector in this country (sector). Therefore, we will see a gap in the treatment by the government of the domestic firm versus the foreign firm in this country (sector).
 \end{enumerate}
 
 The theory leads to two testable hypotheses:
-
-(ADD MORE TESTABLE HYPOTHESIS about the intermediate process here)
 
 \begin{quote}
 Hypothesis: The presence of large FDI firms in corrupt countries is associated with a lack of technological spillover in those countries.
@@ -82,19 +82,23 @@ Hypothesis: The presence of large FDI firms in corrupt countries is associated w
 Hypothesis: The presence of large FDI firms in corrupt sectors is associated with a lack of technological spillover in those sectors.
 \end{quote}
 
-\subsection{Endogenizing government officials' decision to engage in corruption with foreign firm}
+\subsection{Step 3: Endogenizing government officials' decision to engage in corruption with foreign firm}
 
-The theory in the previous section starts with the level of corruption as a given parameter. To advance the theoretical contribution even further, it is important to endogenize the decision by the government officials to engage in corruption with foreign firm. However, ``why is a country corrupt?'' is a big and difficult question to study with a cross-national design due to an insurmountable degree of endogeneity. 
+The theory in the previous section starts with the level of corruption as a given parameter. To advance my theoretical contribution, it is important to endogenize the decision by the government officials to engage in corruption with foreign firm. However, ``why is a country corrupt?'' is a big and difficult question to study with a cross-national design due to an insurmountable degree of endogeneity stemming from unobservable and unmeasurable differences across political systems. 
 
-To get a handle on this question, we need to know the utility calculation of the government officials, which in turn requires knowing the options offered to the officials by the country's political economic system. Therefore, in the next step of the theory, I focus on the case of Vietnam, whose sub-national variation in FDI flow and private sector development serves as an excellent testing ground.
+To get a handle on this question, we need to know the utility calculation of the government officials, which in turn requires knowing the options provided to the officials by the country's political economic system. Therefore, in the next step of the theory, I focus on the case of Vietnam, whose sub-national variation in FDI flow and private sector development serve as an excellent testing ground.
 
 In addition, a cross-national study of corruption suffers from well-known conceptual and measurement issues. Conceptually, corruption means different things in different countries \citep{Rosen2010}. Empirically, even if we restrict corruption to a narrow but clear-cut definition, i.e. the act of bribery in exchange to public goods that should be equally available, it is still very difficult to measure corruption well due to sensitivity bias in surveys. Focusing on the case of Vietnam does not only keep constant the locale-dependent definition of corruption but also takes advantage of a survey list experiment conducted by \citet{Malesky2015} to accurately measure the level of corruption across provinces and sectors without sensitivity bias.
 
-The theory is as follows. I argue that the key to the variation in provincial rent seeking of FDI is the principal-agent relationship between Vietnam's central and the provincial governments. Since most FDI projects are approved at the provincial level, it is the provincial government, not the central, that holds valuable services for sale to foreign firms. This is especially true because the implementation of central law varies widely across sub-national units in Vietnam \citep{Meyer2005}.\footnote{Vietnam's sub-national variation in implementation generalizes well to other developing countries \citep{Thun2006}} The central government, therefore, is more removed from direct contact with FDI firms and thus less likely to benefit from corruption than provincial leaders. At the same time, the central government is much more concerned with overall economic growth, which is central to the longevity of the regime \citep{Malesky2008}. Therefore, the central government is more interested in the spillover effect of FDI, which necessitates the development of a strong domestic sector as discussed.  On the other hand, each provincial leader is incentivized to free-ride on the developmental effort of other provinces and of the central to keep the entire regime stable. 
+\subsubsection{Theory: Corruption with foreign firms as a choice by Vietnamese officials} 
+
+I argue that the key to the provincial variation in corruption involving foreign firms is the principal-agent relationship between Vietnam's central and the provincial governments. Since most FDI projects are approved at the provincial level, it is the provincial government, not the central, that holds valuable services for sale to foreign firms. This is especially true because the implementation of central law varies widely across sub-national units in Vietnam \citep{Meyer2005}.\footnote{Vietnam's sub-national variation in implementation generalizes well to other developing countries \citep{Thun2006}} The central government, therefore, is more removed from direct contact with FDI firms and thus less likely to benefit from corruption than provincial leaders. At the same time, the central government is much more concerned with overall economic growth, which is central to the longevity of the regime \citep{Malesky2008}. Therefore, the central government is more interested in the spillover effect of FDI, which necessitates the development of a strong domestic sector as discussed.  On the other hand, each provincial leader is incentivized to free-ride on the developmental effort of other provinces and of the central to keep the entire regime stable. 
 
 In conclusion, provincial leaders care more about private rents from FDI. In contrast, central leaders care more about the spillover effect of FDI on private sector development.
 
 Fortunately for the central government, the principal-agent problem in this context is partially solved because monitoring is not too difficult. Indeed, the central government can observe the economic performance of the provinces and use personnel management to punish and reward provincial officials \citep{Sheng2007, Li2005}.\footnote{\citet{Shih2012} recently argue that economic performance does not matter to cadre promotion. However, they investigate all members of the Chinese Central Committee, including the central party apparatus, the army, and the central economic bureaucracy. These actors are not the important decision-makers in our theory.} Therefore, the principal-agent problem is only severe when the provincial officials are not interested in further promotion to the central government. This suggests that there will be a variation in private sector development across provinces according to the provincial officials' interest in promotion. By looking at this variation in the career interest of provincial officials, my theory contributes a fresh angle to the current literature on the relationship between decentralization and corruption, which has only postulated a one-way relationship: either decentralization increases bribery \citep{Fan2009} or reduces it \citep{Guerra2009}.
+
+\subsubsection{The game}
 
 The sequencing of the game is as follows:
 \begin{enumerate}
